# agents-crewai

./: README.md  requirements.txt
aliens/: README.md  pyproject.toml
aliens/knowledge/: user_preference.txt
aliens/src/aliens/: crew.py  main.py
aliens/src/aliens/config/: agents.yaml  tasks.yaml
data/: clean-data.py
